--- a/src/pages/wp-page/wp-page.html
+++ b/src/pages/wp-page/wp-page.html
@@ -22,7 +22,7 @@
 
 <ion-content padding class="card-background-page">
     <ion-card *ngIf="is_loaded" class="card-page">
-        <ion-card-header>{{ page.title }}</ion-card-header>
+        <!-- <ion-card-header>{{ page.title }}</ion-card-header> -->
         <ion-card-content>
             <div [innerHtml]="page.content"></div>
         </ion-card-content>
