--- a/src/pages/services/services.html
+++ b/src/pages/services/services.html
@@ -23,7 +23,7 @@
     </ion-segment>
   </div>
 
-  <ion-grid class="list-services">
+  <ion-grid class="list-services" *ngIf="active_view == 'products'">
     <ion-row>
       <ion-col col-12 *ngIf="services && services.length == 0"><p class="center no-result">No Service Found</p></ion-col>
       <ion-col col-6 col-sm-4 *ngFor="let service of services">
@@ -48,6 +48,37 @@
 
   </ion-grid>
 
-  
+  <ion-grid class="list-services" *ngIf="active_view == 'vendors'">
+    <ion-row>
+      <ion-col col-12 *ngIf="vendors && vendors.length == 0"><p class="center no-result">No Vendor Found</p></ion-col>
+      <ion-col col-6 col-sm-4 *ngFor="let vendor of vendors">
+        <ion-card>
+          <!-- <img src="{{ service.image }}"/> -->
+          <div id="service-thumb" [ngStyle]="{'background-image': 'url(' + vendor.avatar + ')'}"></div>
+          <ion-card-content>
+            <ion-card-title>
+              {{ vendor.name }}
+            </ion-card-title>
+            <button ion-button block color="dark" (click)="byVendor(vendor)">{{'View' | translate}}</button>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-grid class="grid-services grid-cats" *ngIf="active_view == 'categories'">
+	  <ion-row>
+	    <ion-col col-6 col-sm-4 col-md-3 *ngFor="let category of categories">
+	      <div class="service card-ios" (click)="byCategory(category)">
+	      	<div class="service-icon">
+	      		<img class="logo" [src]="category.image"/>
+	      	</div>
+	      	<div class="service-name" [ngClass]="{ rtl : language == 'ar' }">
+	      		{{category.name | translate}}
+	      	</div>
+	      </div>
+	    </ion-col>
+	  </ion-row>
+	</ion-grid>
 
 </ion-content>
